ingress-resource.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd
#   namespace: argocd
#   annotations:
#     networking.gke.io/v1beta1.FrontendConfig: argocd-frontend-config
# spec:
#   # tls:
#   # - secretName: secret-yourdomain-com
#   rules:
#   - host: devopstech24.click
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: argocd-server
#             port:
#               number: 80apiVersion: networking.k8s.io/v1

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
  - host: "devopstech24.click"
    http:
      paths:
      - pathType: Prefix
        path: "/hello"
        backend:
          service:
            name: java-spring-app-service
            port:
              number: 8080
